--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Declaratie 2503",
   "icons": [
     {
+      "src": "icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
       "src": "icon-256.png",
       "type": "image/png",
       "sizes": "256x256"
